[gd_scene load_steps=3 format=3 uid="uid://dqxy3ue3j4jjv"]

[ext_resource type="Script" uid="uid://brtyv1h7lf0ch" path="res://Scripts/room_slot.gd" id="1_kjnj3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjnj3"]

[node name="RoomSlot" type="PanelContainer"]
custom_minimum_size = Vector2(500, 200)
offset_right = 500.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_kjnj3")
script = ExtResource("1_kjnj3")

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="BuildMenu" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="BuildMenu"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0

[node name="BuildDamageButton" type="Button" parent="BuildMenu/VBoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="BuildSpeedButton" type="Button" parent="BuildMenu/VBoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="BuildRecoveryButton" type="Button" parent="BuildMenu/VBoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="BuildButton" type="Button" parent="."]
layout_mode = 2
text = "Build New Room"
